Fixed spacing with submit button, input field will now stay stationary when page shrinks and put rrorat buttom of screen

--- a/src/ComingSoon/Desktop/ComingSoon.module.css
+++ b/src/ComingSoon/Desktop/ComingSoon.module.css
@@ -87,13 +87,25 @@
     width: 100%;
     height: 50px;
     border-radius: 30px;
-    /* margin-left: 175px; */
-    /* padding-left: 30px; */
     padding-left: 30px;
-
-
     border: 1px hsl(354, 40%, 76%) solid;
 
+}
+
+.inputFieldError {
+    width: 100%;
+    height: 50px;
+    padding-left: 30px;
+    border-radius: 30px;
+    background: url('../../icons/icon-error.svg');
+    background-repeat: no-repeat;
+    background-position: center right 110px;
+    border: 3px hsl(354, 77%, 55%) solid;
+
+}
+
+.inputFieldError:focus {
+    outline: none;
 }
 
 .inputField::placeholder {
@@ -105,7 +117,7 @@
 .inputField:focus {
 
     outline: none;
-    border: 1px hsl(354, 26%, 39%) solid;
+
 
 }
 
@@ -114,17 +126,37 @@
     height: 20px;
     margin-top: 40px;
     width: 100%;
+    flex-wrap: wrap;
+    width: max-content
 }
 
 
 .submit {
-    width: 120px;
-    height: 55px;
+    width: 128px;
+    height: 53px;
     position: relative;
-    right: 86px;
+    right: 99px;
+    top: 0px;
     border-radius: 30px;
     border-style: none;
     cursor: pointer;
+    outline: none;
+
+    /* margin-top: 1px; */
+
+}
+
+.submitError {
+    width: 126px;
+    height: 53px;
+    position: relative;
+    right: 99px;
+    top: 1px;
+    border-radius: 30px;
+    border-style: none;
+    cursor: pointer;
+    margin-top: 1px;
+    outline: none;
 
 }
 
@@ -135,4 +167,27 @@
 
 .submit:active {
     background: linear-gradient(135deg, hsl(5, 85%, 92%), hsl(5, 79%, 80%)) !important;
+}
+
+.errorHolder {
+
+    color: red;
+    margin-left: 20px;
+}
+
+.inputWrapper {
+    display: flex;
+    width: 100%;
+
+
+}
+
+.hide {
+
+    visibility: hidden;
+}
+
+.show {
+    display: block;
+    visibility: visible;
 }
